--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 #root {
     margin: 0 auto;
     padding: 2rem;
+    padding-bottom: 0;
     text-align: center;
+    height: 100vh;
+    overflow: hidden;
 }
 
 .logo {
